Update heading text in home section

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 </header>
 
 <section id="home" class="hero">
-  <h2>Precision Clamping Solutions</h2>
+  <h2>clamp tek chennai</h2>
   <p>Official Franchise of <b>Clamptek Taiwan</b> | Mechanical Cylinder & Industrial Clamping Solutions in Chennai. <br> <b>Our first priority is Time & Quality.</b></p>
 </section>
 
