--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <div class="product-card">
       <div class="product-inner">
         <div class="product-face product-front">
-          <img src="https://via.placeholder.com/400x250" alt="Toggle Clamps">
+          <img src="images/toggle-clamp.jpg" alt="Toggle Clamps">
           <h3>Toggle Clamps</h3>
         </div>
         <div class="product-face product-back">
