Update email recipient in popup functions

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
 
 function openPopup1() {
-  const to = "k9994270777@gmail.com";
+  const to = "infocwt25@gmail.com";
   const subject = "quotation for hydraulic clamps";
   const body = "This is a test email";
 
@@ -255,7 +255,7 @@ function openPopup1() {
   }
 
 function openPopup2() {
-  const to = "k9994270777@gmail.com";
+  const to = "infocwt25@gmail.com";
   const subject = "quotation for pneumatic clamps";
   const body = "This is a test email";
 
@@ -266,7 +266,7 @@ function openPopup2() {
   }
 
 function openPopup3() {
-  const to = "k9994270777@gmail.com";
+  const to = "infocwt25@gmail.com";
   const subject = "quotation for machining services";
   const body = "This is a test email";
 
