Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="733sERG2XKU1-F7i2VZrRYvZ6ZwvAX8J6m7Hex4Mmpo" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Clamptek Chennai | Official Franchise</title>
   <style>
